testsuite/tests/leopard-typing-curried-constr/test2.ml.reference

#       Characters 40-44:
    | 1 -> Some
           ^^^^
Error: This expression should not be a function, the expected type is
'a option
# 
