testsuite/tests/leopard-typing-curried-constr/test2.ml
let f = function
  | 0 -> None
  | 1 -> Some
;;
